--- a/style.css
+++ b/style.css
@@ -52,3 +52,84 @@ i {
     transform: translateX(0px);
   }
 }
+//...........
+
+.menu {
+    
+    position: absolute;
+    left: -100px;
+    top: 0;
+    width: 100px;
+    z-index: 9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0;
+    transition: left .4s ease-in-out;
+    -webkit-transition: left .4s ease-in-out;
+    -moz-transition: left .4s ease-in-out;
+    -ms-transition: left .4s ease-in-out;
+    -o-transition: left .4s ease-in-out;
+    visibility: hidden;
+}
+
+.menu .active{
+    left: 0;
+}
+
+.menu .menu-list {
+    visibility: visible;
+}
+
+.menu img {
+    width: 30px;
+    height: auto;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    object-fit: cover;
+}
+
+.menu ul {
+    list-style: none;
+    margin: 50px auto;
+    width: 100%;
+}
+
+.menu ul li {
+    text-align: center;
+    border-bottom: 1px solid #616161;
+    border-top: 1px solid #616161;
+    transition: background .3s ease-in-out;
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    -ms-transition: background .3s ease-in-out;
+    -o-transition: background .3s ease-in-out;
+}
+
+.menu ul li:hover {
+    background: #f8f8f8;
+}
+
+.menu ul li a {
+    color: black;
+    text-decoration: none;
+    padding: 10px 0;
+    display: block;
+}
+
+
+.menu .menu-list {
+    position: absolute;
+    right: -40px;
+    top: 20px;
+    width: 40px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+
+}
